--- a/istio/ing/httpbin-ingress.yaml
+++ b/istio/ing/httpbin-ingress.yaml
@@ -1,7 +1,7 @@
 apiVersion: extensions/v1beta1
 kind: Ingress
 metadata:
-  name: httpbin-gateway
+  name: gateway
   annotations:
     kubernetes.io/ingress.class: "istio"
 spec:
