--- a/istio/httpbin/destination-policy-httpbin.yaml
+++ b/istio/httpbin/destination-policy-httpbin.yaml
@@ -1,9 +1,9 @@
 apiVersion: config.istio.io/v1beta1
 kind: DestinationPolicy
 metadata:
-  name: reviews-random
+  name: httpbin-random
 spec:
   destination:
-    name: reviews
+    name: httpbin
   loadBalancing:
     name: LEAST_CONN
