--- a/istio/example/oscon-demo/security-talk/istio/keycloak-virtualservice-for-customer.yaml
+++ b/istio/example/oscon-demo/security-talk/istio/keycloak-virtualservice-for-customer.yaml
@@ -1,7 +1,7 @@
 apiVersion: networking.istio.io/v1alpha3
 kind: VirtualService
 metadata:
-  name: httpbin
+  name: customer
 spec:
   hosts:
   - "*"
@@ -18,7 +18,7 @@ spec:
           number: 8080
   - route:
     - destination:
-        host: httpbin
+        host: customer
         port:
-          number: 8000
+          number: 8080
   
